Question-4 Decoupled.